# EmailOrganizerAI

./: README.md  email_categoriser.py  pyproject.toml
